# clickupython

./: .gitignore  .travis.yml  README.md  clean.sh  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  updatepip.sh
Scripts/: activate  activate.bat  coverage-3.9-script.py  coverage-script.py  coverage3-script.py
clickupy/: __init__.py  assignee.py  attachment.py  checklists.py  clickuplist.py  client.py  comment.py  creator.py  customfield.py  folder.py  list.py  models.py  priority.py  pyvenv.cfg  status.py  task.py  teams.py  typeconfig.py  user.py
clickupy/Scripts/: activate  activate.bat
clickupy/helpers/: error.py  formatting.py  timefuncs.py
clickupy/tests/: test_client.py
clickupython/: client.py  exceptions.py  models.py
clickupython/helpers/: formatting.py  timefuncs.py
docs/: .buildinfo  clickupy.helpers  clickupy.helpers.rst  clickupy.html  clickupy.rst  conf.py  examples.rst  functions.rst  genindex.html  index.html  index.rst  lists.rst  modules.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js  tasks.rst  tests.html
docs/_sources/: index.rst.txt
docs/clickupy/: clickupy.helpers.html
docs/doctrees/: clickupy.doctree  clickupy.helpers.doctree  environment.pickle  index.doctree  modules.doctree  setup.doctree  tests.doctree
docs/html/: clickupy.helpers.html  clickupy.html  modules.html  objects.inv  search.html  setup.html
docs/source/: clickupy.helpers.rst  clickupy.html  conf.py  index.html  (+5 more)
examples/: __init__.py  examples.py
tests/: .coverage  test_client.py  test_timefuncs.py
(+61 files in other folders)
