[tool.poetry]
name = "clickupython"
version = "1.0.0"
description = "A client for working with the ClickUp API V2 in Python"
authors = ["imzachjohnson <imzachjohnson@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.26.0"
pydantic = "^1.8.2"
pendulum = "^2.1.2"
typing-extensions = "^3.10.0"
timefhuman = "^0.0.5"
word2number = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
